--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,10 +8,19 @@ espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.9.0"
 composeBom = "2023.08.00"
+androidx-appcompat = "1.7.0"
+
+meridian-volley = "1.2.1"
+meridian-otto = "1.3.8"
+meridian-conscrypt = "2.5.2"
+meridian-trilateration = "1.0.2"
+
+google-material = "1.9.0"
+google-secrets = "2.0.1"
 
 [libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
@@ -24,8 +33,25 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
+google-material = { module = "com.google.android.material:material", version.ref = "google-material" }
+
+meridian-volley = { module = "com.android.volley:volley", version.ref = "meridian-volley" }
+meridian-otto = { module = "com.squareup:otto", version.ref = "meridian-otto" }
+meridian-conscrypt = { module = "org.conscrypt:conscrypt-android", version.ref = "meridian-conscrypt" }
+meridian-trilateration = { module = "com.lemmingapex.trilateration:trilateration", version.ref = "meridian-trilateration" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+google-secrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "google-secrets" }
+
+[bundles]
+meridianSdkDependencies = [
+    "meridian-volley",
+    "meridian-otto",
+    "meridian-conscrypt",
+    "meridian-trilateration"
+]
+
 
