--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ meridian-trilateration = "1.0.2"
 google-material = "1.9.0"
 google-secrets = "2.0.1"
 
+logging-timber = "5.0.1"
+
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +42,8 @@ meridian-volley = { module = "com.android.volley:volley", version.ref = "meridia
 meridian-otto = { module = "com.squareup:otto", version.ref = "meridian-otto" }
 meridian-conscrypt = { module = "org.conscrypt:conscrypt-android", version.ref = "meridian-conscrypt" }
 meridian-trilateration = { module = "com.lemmingapex.trilateration:trilateration", version.ref = "meridian-trilateration" }
+
+logging-timber = { module = "com.jakewharton.timber:timber", version.ref = "logging-timber" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
