--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.MeridianMultiprocessBug">
+            android:theme="@style/Theme.MeridianMultiprocessBug"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +30,8 @@
         <activity
             android:name=".SecondaryActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.MeridianMultiprocessBug" />
+            android:theme="@style/Theme.MeridianMultiprocessBug"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity" />
     </application>
 
 </manifest>
