Set up sample for crash reproduction

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 
         <activity
             android:name=".SecondaryActivity"
+            android:process=":NewProcess"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.MeridianMultiprocessBug"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
